update smashipsum cover, prevent overflow

--- a/components/portfolio/portfolio.module.scss
+++ b/components/portfolio/portfolio.module.scss
@@ -5,6 +5,7 @@
   margin-top: 90vh;
   position: relative;
   padding-bottom: 5rem;
+  overflow: hidden;
 }
 
 .grid {
